Added first project and some layout changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<header class="major">
 								<h2>welcome, I'm Robin</h2>
 								<p>This website serves as a representational roadmap to collect the projects and courses<br>
-									I go through on my journey to become a self-taught machine learning expert.</p>
+									I go through on my journey to become a self-taught data scientist / machine learning expert.</p>
 							</header>
 							<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 						</article>
