--- a/projects.html
+++ b/projects.html
@@ -42,17 +42,20 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Project 1</a></h2>
+										<h2>Analysis of California House Pricing</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-                                    <p>Fist Test Project of Machine Learning Fundamentals</p>
-                                    <p class="technologies"><u>Technologies used:</u><br>
-                                    Python, Numpy, Pandas, Scikit-Learn, Matplotlib, Seaborn, Jupyter Notebooks
-                                    </p>
-									<ul class="actions special">
-										<li><a href="#" class="button small">View Project</a></li>
-										<li><a href="#" class="button primary small">View Code</a></li>
+									<a href="#" class="image fit"><img src="images/house_prices.png" alt="house-pricing-projec-icon"/></a>
+                                    <p>First full data science project. Subject was to predict the median house price of houses in california.</p>
+									<ul class="actions special fit">
+										<li><a href="#" class="button small fit"><i class="fas fa-folder" style="margin-right: 5px;"></i> Details</a></li>
+										<li><a href="#" class="button primary small fit"><i class="fas fa-code" style="margin-right: 5px;"></i> Code</a></li>
 									</ul>
+									<p class="technologies"><u>Technologies used:</u>
+										<ul class="technologies-list">
+											<li><b>Python</b> <i>(Pandas, Numpy, SciKitLearn, Matplotlib, Jupyter Notebook)</i></li>
+											<li><b>Machine Learning</b> <i>(transfromation pipelines, regression, grid search)</i></li>
+										</ul>
+									</p>
 								</article>
 								<article>
 									<header>
